--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1{
 .imaged{
     margin: 0;
     background-repeat: no-repeat;
-    background-image:url(picture/faculty.jpg);
+    background-image:url(faculty.jpg);
     background-size: cover;
     background-size: 100% 150%;
     background-blend-mode: color-burn;
